--- a/projetoLi/index.html
+++ b/projetoLi/index.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pesquisa de Artistas Musicais</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
- 
+    <title>Escolha de Artistas</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Pesquisar Artistas Musicais</h1>
+        <h1>Escolha o Artista</h1>
     </header>
     <main>
-        <form action="/buscar" method="GET">
-            <label for="artist-name">Nome do Artista:</label>
-            <input type="text" id="artist-name" name="artist" placeholder="Digite o nome do artista" required>
-            <button type="submit">Pesquisar</button>
-        </form>
+        <div class="dropdown">
+            <button class="dropdown-button">Selecionar Artista</button>
+            <ul class="dropdown-menu">
+                <li><a href="#">Tony Carreira</a></li>
+                <li><a href="#">Toy</a></li>
+                <li><a href="#">Quim Barreiros</a></li>
+            </ul>
+        </div>
     </main>
     <footer>
-        <p>&copy;ProjetoLi, Procura de Artistas Musicais</p>
+        <p>&copy; ProjetoLi</p>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
 </body>
 </html>
+
