--- a/projetoLi/index.html
+++ b/projetoLi/index.html
@@ -14,14 +14,18 @@
         <div class="dropdown">
             <button class="dropdown-button">Selecionar Artista</button>
             <ul class="dropdown-menu">
-                <li><a href="#">Tony Carreira</a></li>
-                <li><a href="#">Toy</a></li>
-                <li><a href="#">Quim Barreiros</a></li>
+                <li><a href="#" data-id="1">Tony Carreira</a></li>
+                <li><a href="#" data-id="2">Toy</a></li>
+                <li><a href="#" data-id="3">Quim Barreiros</a></li>
             </ul>
+        </div>
+        <div id="artista-info">
+            <!-- Informações do artista serão exibidas aqui -->
         </div>
     </main>
     <footer>
         <p>&copy; ProjetoLi</p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
