--- a/projetoLi/index.html
+++ b/projetoLi/index.html
@@ -3,29 +3,109 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Escolha de Artistas</title>
+    <title>Artistas Portugueses</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            background-color: #f4f4f4;
+        }
+
+        #selecionarArtista, #artistaSelecionado {
+            text-align: center;
+            width: 80%;
+            max-width: 600px;
+            margin: 0 auto;
+        }
+
+        button {
+            padding: 10px 20px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            font-size: 16px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+            margin: 10px 0;
+        }
+
+        button:hover {
+            background-color: #0056b3;
+        }
+
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        ul li {
+            padding: 8px 0;
+        }
+
+        h2, h3 {
+            color: #333;
+        }
+
+        #detalhesArtista img {
+            width: 100%;
+            max-width: 300px;
+            border-radius: 8px;
+            margin-bottom: 20px;
+        }
+
+        #artistasList {
+            padding: 0;
+            margin: 0;
+        }
+
+        #artistasList li {
+            margin-bottom: 10px;
+        }
+
+        #artistasList li a {
+            text-decoration: none;
+            color: #007bff;
+            font-size: 18px;
+            cursor: pointer;
+        }
+
+        #artistasList li a:hover {
+            color: #0056b3;
+        }
+    </style>
 </head>
 <body>
     <header>
         <h1>Escolha o Artista</h1>
     </header>
     <main>
-        <div class="dropdown">
-            <button class="dropdown-button">Selecionar Artista</button>
-            <ul class="dropdown-menu">
-                <li><a href="#" data-id="1">Tony Carreira</a></li>
-                <li><a href="#" data-id="2">Toy</a></li>
-                <li><a href="#" data-id="3">Quim Barreiros</a></li>
-            </ul>
+        <!-- Detalhes do Artista Selecionado -->
+        <div id="artistaSelecionado" style="display: none;">
+            <button id="voltarButton">Voltar</button>
+            <div id="detalhesArtista"></div>
         </div>
-        <div id="artista-info">
-            <!-- Informações do artista serão exibidas aqui -->
+
+        <!-- Seção para selecionar o Artista -->
+        <div id="selecionarArtista" style="display: block;">
+            <button id="mostrarArtistasButton">Selecionar Artista</button>
+            <ul id="artistasList" class="dropdown-menu" style="display: none;">
+                <!-- Lista de Artistas será carregada via JavaScript -->
+            </ul>
         </div>
     </main>
     <footer>
         <p>&copy; ProjetoLi</p>
     </footer>
+
     <script src="script.js"></script>
 </body>
 </html>
+
