--- a/projetoLi/index.html
+++ b/projetoLi/index.html
@@ -5,102 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Artistas Portugueses</title>
     <link rel="stylesheet" href="style.css">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            background-color: #f4f4f4;
-        }
-
-        #selecionarArtista, #artistaSelecionado {
-            text-align: center;
-            width: 80%;
-            max-width: 600px;
-            margin: 0 auto;
-        }
-
-        button {
-            padding: 10px 20px;
-            background-color: #007bff;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            font-size: 16px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-            margin: 10px 0;
-        }
-
-        button:hover {
-            background-color: #0056b3;
-        }
-
-        ul {
-            list-style-type: none;
-            padding: 0;
-        }
-
-        ul li {
-            padding: 8px 0;
-        }
-
-        h2, h3 {
-            color: #333;
-        }
-
-        #detalhesArtista img {
-            width: 100%;
-            max-width: 300px;
-            border-radius: 8px;
-            margin-bottom: 20px;
-        }
-
-        #artistasList {
-            padding: 0;
-            margin: 0;
-        }
-
-        #artistasList li {
-            margin-bottom: 10px;
-        }
-
-        #artistasList li a {
-            text-decoration: none;
-            color: #007bff;
-            font-size: 18px;
-            cursor: pointer;
-        }
-
-        #artistasList li a:hover {
-            color: #0056b3;
-        }
-    </style>
 </head>
 <body>
     <header>
         <h1>Escolha o Artista</h1>
     </header>
     <main>
-        <!-- Detalhes do Artista Selecionado -->
-        <div id="artistaSelecionado" style="display: none;">
-            <button id="voltarButton">Voltar</button>
-            <div id="detalhesArtista"></div>
-        </div>
-
-        <!-- Seção para selecionar o Artista -->
-        <div id="selecionarArtista" style="display: block;">
-            <button id="mostrarArtistasButton">Selecionar Artista</button>
-            <ul id="artistasList" class="dropdown-menu" style="display: none;">
-                <!-- Lista de Artistas será carregada via JavaScript -->
+        <div id="selecionarArtista">
+            <button id="mostrarArtistasButton" class="button">Selecionar Artista</button>
+            <ul id="artistasList" class="dropdown-menu">
+                <!-- Artistas carregados dinamicamente -->
             </ul>
         </div>
+
+        <div id="artistaSelecionado" class="artista-details">
+            <div id="detalhesArtista"></div>
+            <button id="voltarButton" class="button">Voltar</button>
+        </div>
     </main>
+
     <footer>
         <p>&copy; ProjetoLi</p>
     </footer>
